2008-12-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- added AC_CONFIG_MACRO_DIR to avoid warnings while bootstrap.

2008-11-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a version number string. Official release 13.0.0.

	* src/valueparser.C:
	- fixed gcc-4.3 compiler warnings.

	* src/Makefile.am:
	* src/client2dview.C:
	* src/display_base.h:
	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	* src/valueparser.C:
	- supported v4 monitor protocol.
	- added the drawing of stamina capacity information.
	- set options to check the strict compiler warning.

2008-10-10  Hidehisa Akiyama  <akiyama@akym-ubuntu810>

	* configure.ac:
	* src/2dview.C:
	* src/rcssmonitor.xpm:
	- improved X library checking.
	- fixed gcc-4.2 warnings concerned with xpm data.

2008-04-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a version number string. Official release 12.1.0.
	- removed unused macros.

2008-04-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/2dview.C:
	* src/input_dev.h:
	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	- supported automatic reconnection to the server. added new
	options, 'auto_reconnect_mode' and 'auto_reconnect_wait'.

2008-04-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	- added pointto info painting in info level 3.
	- supported draw info in the v3 protocol.

2008-02-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a version number string. Official release 12.0.0.

	* src/smonitor_dev.C
	(SMonitorDevice::server_interpret_server_param_v3):
	- fixed a defect related to sscanf.

	* src/smonitor_dev.C:
	- fixed show data format.

2008-02-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/2dview.C:
	- updated copyright notice.

2008-02-15  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/smonitor_dev.C: